# adressfinder

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-03-24-gui-design.md
src/grundstuecksfinder/: app.py  cli.py  filter.py  formatter.py  geocoder.py  lika_client.py  map_builder.py  map_export.py
tests/: conftest.py  test_cli.py  test_filter.py  test_formatter.py  test_geocoder.py  test_integration.py  test_lika_client.py  test_map_builder.py  test_map_export.py
