[project]
name = "grundstuecksfinder"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "folium>=0.15",
    "tabulate>=0.9",
    "streamlit>=1.35",
    "streamlit-folium>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
grundstuecksfinder = "grundstuecksfinder.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
